apps/shopping-app/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: soham22202/shopping-frontend:ci-9
          imagePullPolicy: Always
          ports:
            - containerPort: 80
